App/sample-app/devops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app-deployment
spec:
  selector:
    matchLabels:
      app: sample-app-pod
  replicas: 1
  template:
    metadata:
      labels:
        app: sample-app-pod
    spec:
      containers:
        - name: sample-app-container
          image: gcr.io/cs598-cloud-computing-capstone/sample-app:0.0.1
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 2Gi
            requests:
              cpu: 200m
              memory: 1Gi
          livenessProbe:
            initialDelaySeconds: 20
            httpGet:
              port: 8080
              path: /hello
          readinessProbe:
            initialDelaySeconds: 30
            httpGet:
              port: 8080
              path: /hello
