App/sample-app/devops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: [SERVICE_NAME]-service
spec:
  selector:
    app: [SERVICE_NAME]-pod 
  ports:
    - port: 80 
      targetPort: 8080 
  type: NodePort
