App/sample-app/devops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: 35.223.4.82.nip.io
    http:
      paths:
      - path: /sample/(.*)
        pathType: Prefix
        backend:
          service:
            name: sample-app-service
            port:
              number: 80
